Start to describe experiments

--- a/macros.tex
+++ b/macros.tex
@@ -28,13 +28,13 @@
 \newcommand{\EdmondKarp}{\textsc{EdmondKarp}}
 
 %Benchmark Instances
-\newcommand{\ALL}{\sc All}
-\newcommand{\Dual}{\sc Dual}
-\newcommand{\Primal}{\sc Primal}
-\newcommand{\ISPD}{\sc Ispd98}
-\newcommand{\Literal}{\sc{Literal}}
-\newcommand{\SPM}{\sc Spm}
-\newcommand{\DAC}{\sc Dac}
+\newcommand{\ALL}{\textsc{All}}
+\newcommand{\Dual}{\textsc{Dual}}
+\newcommand{\Primal}{\textsc{Primal}}
+\newcommand{\ISPD}{\textsc{Ispd98}}
+\newcommand{\Literal}{\textsc{Literal}}
+\newcommand{\SPM}{\textsc{Spm}}
+\newcommand{\DAC}{\textsc{Dac}}
 
 %Experiment Flow Networks
 \newcommand{\ExpLawler}{T_L}
