--- a/master_thesis/experiments/flow_network/node_edge_distribution.tex
+++ b/master_thesis/experiments/flow_network/node_edge_distribution.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.6.2-92-0ad2792 on 2017-10-30 10:43:04
+% Created by tikzDevice version 0.6.2-92-0ad2792 on 2017-11-02 18:28:28
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
@@ -7,259 +7,277 @@
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
 
-\path[fill=fillColor] (  0.00,  0.00) rectangle (505.89,433.62);
+\path[fill=fillColor] ( -0.00,  0.00) rectangle (505.89,433.62);
 \end{scope}
 \begin{scope}
-\path[clip] ( 45.19,138.27) rectangle (503.04,433.62);
+\path[clip] ( 52.03,138.27) rectangle (503.04,433.62);
 \definecolor[named]{drawColor}{rgb}{0.75,0.75,0.75}
 
-\path[draw=drawColor,line width= 1.5pt,line join=round,line cap=round] ( 45.19,138.27) rectangle (503.04,433.62);
+\path[draw=drawColor,line width= 1.5pt,line join=round,line cap=round] ( 52.03,138.27) rectangle (503.04,433.62);
 \definecolor[named]{drawColor}{rgb}{0.90,0.90,0.90}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.19,176.07) --
-	(503.04,176.07);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,152.39) --
+	(503.04,152.39);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.19,277.08) --
-	(503.04,277.08);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,192.81) --
+	(503.04,192.81);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.19,346.63) --
-	(503.04,346.63);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,273.64) --
+	(503.04,273.64);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 45.19,403.16) --
-	(503.04,403.16);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,345.07) --
+	(503.04,345.07);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (101.77,138.27) --
-	(101.77,433.62);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 52.03,402.22) --
+	(503.04,402.22);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (225.08,138.27) --
-	(225.08,433.62);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 92.03,138.27) --
+	( 92.03,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (309.97,138.27) --
-	(309.97,433.62);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (139.09,138.27) --
+	(139.09,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (378.98,138.27) --
-	(378.98,433.62);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (233.22,138.27) --
+	(233.22,433.62);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] (438.64,138.27) --
-	(438.64,433.62);
+\path[draw=drawColor,line width= 0.3pt,line join=round] (316.39,138.27) --
+	(316.39,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 45.19,233.22) --
+\path[draw=drawColor,line width= 0.3pt,line join=round] (382.95,138.27) --
+	(382.95,433.62);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] (440.22,138.27) --
+	(440.22,433.62);
+
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,233.22) --
 	(503.04,233.22);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 45.19,314.05) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,314.05) --
 	(503.04,314.05);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 45.19,376.08) --
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,376.08) --
 	(503.04,376.08);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (171.54,138.27) --
-	(171.54,433.62);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 52.03,428.37) --
+	(503.04,428.37);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (270.21,138.27) --
-	(270.21,433.62);
+\path[draw=drawColor,line width= 0.8pt,line join=round] (186.15,138.27) --
+	(186.15,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (345.92,138.27) --
-	(345.92,433.62);
+\path[draw=drawColor,line width= 0.8pt,line join=round] (280.28,138.27) --
+	(280.28,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (409.75,138.27) --
-	(409.75,433.62);
+\path[draw=drawColor,line width= 0.8pt,line join=round] (352.50,138.27) --
+	(352.50,433.62);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] (465.98,138.27) --
-	(465.98,433.62);
+\path[draw=drawColor,line width= 0.8pt,line join=round] (413.39,138.27) --
+	(413.39,433.62);
+
+\path[draw=drawColor,line width= 0.8pt,line join=round] (467.04,138.27) --
+	(467.04,433.62);
 \definecolor[named]{fillColor}{rgb}{0.78,0.49,1.00}
 
-\path[fill=fillColor] (110.75,174.30) circle ( 11.07);
+\path[fill=fillColor] (128.16,174.30) circle ( 11.07);
 
-\path[fill=fillColor] (129.02,219.91) --
-	(143.93,194.10) --
-	(114.12,194.10) --
+\path[fill=fillColor] (145.59,219.91) --
+	(160.50,194.10) --
+	(130.69,194.10) --
 	cycle;
 
-\path[fill=fillColor] ( 54.94,140.63) --
-	( 77.07,140.63) --
-	( 77.07,162.76) --
-	( 54.94,162.76) --
+\path[fill=fillColor] ( 74.41,140.63) --
+	( 96.54,140.63) --
+	( 96.54,162.76) --
+	( 74.41,162.76) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.78,0.49,1.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (277.89,339.13) -- (309.19,339.13);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (286.89,339.13) -- (318.19,339.13);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (293.54,323.48) -- (293.54,354.78);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.54,323.48) -- (302.54,354.78);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (199.27,241.49) rectangle (221.41,263.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (212.10,241.49) rectangle (234.23,263.62);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (199.27,241.49) -- (221.41,263.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (212.10,241.49) -- (234.23,263.62);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (199.27,263.62) -- (221.41,241.49);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (212.10,263.62) -- (234.23,241.49);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (132.79,356.58) -- (154.92,378.71);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.68,356.58) -- (170.81,378.71);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (132.79,378.71) -- (154.92,356.58);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.68,378.71) -- (170.81,356.58);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (128.21,367.65) -- (159.50,367.65);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (144.09,367.65) -- (175.39,367.65);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (143.85,352.00) -- (143.85,383.29);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (159.74,352.00) -- (159.74,383.29);
 \definecolor[named]{fillColor}{rgb}{0.00,0.75,0.77}
 
-\path[fill=fillColor] (122.69,179.46) circle ( 11.07);
+\path[fill=fillColor] (139.56,179.46) circle ( 11.07);
 
-\path[fill=fillColor] (136.75,223.45) --
-	(151.65,197.63) --
-	(121.85,197.63) --
+\path[fill=fillColor] (152.97,223.45) --
+	(167.87,197.63) --
+	(138.06,197.63) --
 	cycle;
 
-\path[fill=fillColor] ( 95.94,167.04) --
-	(118.07,167.04) --
-	(118.07,189.17) --
-	( 95.94,189.17) --
+\path[fill=fillColor] (113.52,167.04) --
+	(135.65,167.04) --
+	(135.65,189.17) --
+	(113.52,189.17) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.00,0.75,0.77}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (277.90,339.13) -- (309.20,339.13);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (286.90,339.13) -- (318.20,339.13);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (293.55,323.49) -- (293.55,354.78);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (302.55,323.49) -- (302.55,354.78);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (208.85,246.62) rectangle (230.98,268.75);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (221.23,246.62) rectangle (243.37,268.75);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (208.85,246.62) -- (230.98,268.75);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (221.23,246.62) -- (243.37,268.75);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (208.85,268.75) -- (230.98,246.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (221.23,268.75) -- (243.37,246.62);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (134.89,357.85) -- (157.02,379.98);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.68,357.85) -- (172.81,379.98);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (134.89,379.98) -- (157.02,357.85);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.68,379.98) -- (172.81,357.85);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (130.31,368.92) -- (161.61,368.92);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (146.10,368.92) -- (177.40,368.92);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (145.96,353.27) -- (145.96,384.57);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (161.75,353.27) -- (161.75,384.57);
 \definecolor[named]{fillColor}{rgb}{0.49,0.68,0.00}
 
-\path[fill=fillColor] (168.29,203.29) circle ( 11.07);
+\path[fill=fillColor] (183.06,203.29) circle ( 11.07);
 
-\path[fill=fillColor] (177.81,241.23) --
-	(192.71,215.41) --
-	(162.90,215.41) --
+\path[fill=fillColor] (192.13,241.23) --
+	(207.03,215.41) --
+	(177.23,215.41) --
 	cycle;
 
-\path[fill=fillColor] ( 55.00,140.63) --
-	( 77.13,140.63) --
-	( 77.13,162.76) --
-	( 55.00,162.76) --
+\path[fill=fillColor] ( 74.47,140.63) --
+	( 96.60,140.63) --
+	( 96.60,162.76) --
+	( 74.47,162.76) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.49,0.68,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.43,420.16) -- (497.72,420.16);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.74,420.16) -- (498.04,420.16);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.08,404.52) -- (482.08,433.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.39,404.52) -- (482.39,433.62);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (313.26,298.71) rectangle (335.39,320.85);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (320.84,298.71) rectangle (342.97,320.85);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (313.26,298.71) -- (335.39,320.85);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (320.84,298.71) -- (342.97,320.85);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (313.26,320.85) -- (335.39,298.71);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (320.84,320.85) -- (342.97,298.71);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (137.38,359.41) -- (159.51,381.54);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.06,359.41) -- (175.19,381.54);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (137.38,381.54) -- (159.51,359.41);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (153.06,381.54) -- (175.19,359.41);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (132.80,370.47) -- (164.09,370.47);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.47,370.47) -- (179.77,370.47);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (148.45,354.83) -- (148.45,386.12);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (164.12,354.83) -- (164.12,386.12);
 \definecolor[named]{fillColor}{rgb}{0.97,0.46,0.43}
 
-\path[fill=fillColor] (186.42,210.60) circle ( 11.07);
+\path[fill=fillColor] (200.35,210.60) circle ( 11.07);
 
-\path[fill=fillColor] (188.76,245.77) --
-	(203.66,219.96) --
-	(173.86,219.96) --
+\path[fill=fillColor] (202.58,245.77) --
+	(217.48,219.96) --
+	(187.68,219.96) --
 	cycle;
 
-\path[fill=fillColor] ( 96.06,167.07) --
-	(118.19,167.07) --
-	(118.19,189.20) --
-	( 96.06,189.20) --
+\path[fill=fillColor] (113.64,167.07) --
+	(135.77,167.07) --
+	(135.77,189.20) --
+	(113.64,189.20) --
 	cycle;
 \definecolor[named]{drawColor}{rgb}{0.97,0.46,0.43}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.58,420.19) -- (497.88,420.19);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (466.90,420.19) -- (498.19,420.19);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.23,404.55) -- (482.23,433.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (482.54,404.55) -- (482.54,433.62);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (324.94,302.98) rectangle (347.07,325.11);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (331.98,302.98) rectangle (354.11,325.11);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (324.94,302.98) -- (347.07,325.11);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (331.98,302.98) -- (354.11,325.11);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (324.94,325.11) -- (347.07,302.98);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (331.98,325.11) -- (354.11,302.98);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (139.85,360.91) -- (161.98,383.04);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.41,360.91) -- (177.54,383.04);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (139.85,383.04) -- (161.98,360.91);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (155.41,383.04) -- (177.54,360.91);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (135.26,371.97) -- (166.56,371.97);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.83,371.97) -- (182.13,371.97);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (150.91,356.32) -- (150.91,387.62);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (166.48,356.32) -- (166.48,387.62);
+\definecolor[named]{drawColor}{rgb}{1.00,0.00,0.00}
+\definecolor[named]{fillColor}{rgb}{1.00,0.00,0.00}
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 4pt off 4pt ,line join=round,fill=fillColor] ( 72.53,138.27) -- ( 72.53,433.62);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 40.77,230.19) {3e+05};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,230.19) {300000};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 40.77,311.02) {6e+05};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,311.02) {600000};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 40.77,373.05) {9e+05};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,373.05) {900000};
+
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.88] at ( 47.61,425.34) {1200000};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 43.77,233.22) --
-	( 45.19,233.22);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,233.22) --
+	( 52.03,233.22);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 43.77,314.05) --
-	( 45.19,314.05);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,314.05) --
+	( 52.03,314.05);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 43.77,376.08) --
-	( 45.19,376.08);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,376.08) --
+	( 52.03,376.08);
+
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 50.61,428.37) --
+	( 52.03,428.37);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (171.54,136.84) --
-	(171.54,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (186.15,136.84) --
+	(186.15,138.27);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (270.21,136.84) --
-	(270.21,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (280.28,136.84) --
+	(280.28,138.27);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (345.92,136.84) --
-	(345.92,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (352.50,136.84) --
+	(352.50,138.27);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (409.75,136.84) --
-	(409.75,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (413.39,136.84) --
+	(413.39,138.27);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] (465.98,136.84) --
-	(465.98,138.27);
+\path[draw=drawColor,line width= 0.6pt,line join=round] (467.04,136.84) --
+	(467.04,138.27);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (171.54,127.78) {1e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (186.15,127.78) {1e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (270.21,127.78) {2e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (280.28,127.78) {2e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (345.92,127.78) {3e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (352.50,127.78) {3e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (409.75,127.78) {4e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (413.39,127.78) {4e+05};
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (465.98,127.78) {5e+05};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.88] at (467.04,127.78) {5e+05};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (274.12,110.97) {Number of Nodes};
+\node[text=drawColor,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.99] at (277.54,110.97) {Number of Nodes};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
@@ -272,28 +290,28 @@
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (185.29, 78.25) rectangle (213.74,106.70);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (188.71, 78.25) rectangle (217.16,106.70);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
 
-\path[fill=fillColor] (199.51, 92.47) circle ( 11.07);
+\path[fill=fillColor] (202.93, 92.47) circle ( 11.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (185.29, 49.79) rectangle (213.74, 78.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (188.71, 49.79) rectangle (217.16, 78.25);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
 
-\path[fill=fillColor] (199.51, 81.23) --
-	(214.42, 55.41) --
-	(184.61, 55.41) --
+\path[fill=fillColor] (202.93, 81.23) --
+	(217.84, 55.41) --
+	(188.03, 55.41) --
 	cycle;
 \end{scope}
 \begin{scope}
@@ -301,16 +319,16 @@
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (243.34, 78.25) rectangle (271.80,106.70);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (246.76, 78.25) rectangle (275.22,106.70);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{fillColor}{rgb}{0.00,0.00,0.00}
 
-\path[fill=fillColor] (246.50, 81.41) --
-	(268.64, 81.41) --
-	(268.64,103.54) --
-	(246.50,103.54) --
+\path[fill=fillColor] (249.93, 81.41) --
+	(272.06, 81.41) --
+	(272.06,103.54) --
+	(249.93,103.54) --
 	cycle;
 \end{scope}
 \begin{scope}
@@ -318,166 +336,166 @@
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (243.34, 49.79) rectangle (271.80, 78.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (246.76, 49.79) rectangle (275.22, 78.25);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (241.92, 64.02) -- (273.22, 64.02);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (245.34, 64.02) -- (276.64, 64.02);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (257.57, 48.37) -- (257.57, 79.67);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (260.99, 48.37) -- (260.99, 79.67);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (304.44, 78.25) rectangle (332.89,106.70);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (307.86, 78.25) rectangle (336.31,106.70);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (307.60, 81.41) rectangle (329.73,103.54);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 81.41) rectangle (333.15,103.54);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (307.60, 81.41) -- (329.73,103.54);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 81.41) -- (333.15,103.54);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (307.60,103.54) -- (329.73, 81.41);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02,103.54) -- (333.15, 81.41);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (304.44, 49.79) rectangle (332.89, 78.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (307.86, 49.79) rectangle (336.31, 78.25);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (307.60, 52.95) -- (329.73, 75.08);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 52.95) -- (333.15, 75.08);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (307.60, 75.08) -- (329.73, 52.95);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (311.02, 75.08) -- (333.15, 52.95);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (303.02, 64.02) -- (334.31, 64.02);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (306.44, 64.02) -- (337.73, 64.02);
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (318.66, 48.37) -- (318.66, 79.67);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round] (322.09, 48.37) -- (322.09, 79.67);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (215.55, 89.63) {\DAC};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (218.97, 89.63) {\DAC};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (215.55, 61.18) {\ISPD};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (218.97, 61.18) {\ISPD};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (273.60, 89.63) {\Dual};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (277.02, 89.63) {\Dual};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (273.60, 61.18) {\Primal};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (277.02, 61.18) {\Primal};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (334.70, 89.63) {\Literal};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (338.12, 89.63) {\Literal};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (334.70, 61.18) {\SPM};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (338.12, 61.18) {\SPM};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (184.44, 12.80) rectangle (212.90, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (187.86, 12.80) rectangle (216.32, 41.26);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.97,0.46,0.43}
 \definecolor[named]{fillColor}{rgb}{0.97,0.46,0.43}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (198.67, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (202.09, 27.03) circle ( 11.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (226.27, 12.80) rectangle (254.72, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (229.69, 12.80) rectangle (258.14, 41.26);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.49,0.68,0.00}
 \definecolor[named]{fillColor}{rgb}{0.49,0.68,0.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (240.49, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (243.92, 27.03) circle ( 11.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (269.41, 12.80) rectangle (297.87, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (272.83, 12.80) rectangle (301.29, 41.26);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.75,0.77}
 \definecolor[named]{fillColor}{rgb}{0.00,0.75,0.77}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (283.64, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (287.06, 27.03) circle ( 11.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{1.00,1.00,1.00}
 \definecolor[named]{fillColor}{rgb}{0.95,0.95,0.95}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (311.85, 12.80) rectangle (340.30, 41.26);
+\path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round,fill=fillColor] (315.27, 12.80) rectangle (343.72, 41.26);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.78,0.49,1.00}
 \definecolor[named]{fillColor}{rgb}{0.78,0.49,1.00}
 
-\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (326.08, 27.03) circle ( 11.07);
+\path[draw=drawColor,line width= 0.4pt,line join=round,line cap=round,fill=fillColor] (329.50, 27.03) circle ( 11.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (214.70, 24.19) {$\ExpLawler$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (218.12, 24.19) {$\ExpLawler$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (256.53, 24.19) {$\ExpNodeDegree$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (259.95, 24.19) {$\ExpNodeDegree$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (299.67, 24.19) {$\ExpEdgeSize$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (303.09, 24.19) {$\ExpEdgeSize$};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (505.89,433.62);
 \definecolor[named]{drawColor}{rgb}{0.00,0.00,0.00}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (342.11, 24.19) {$\ExpHybrid$};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.82] at (345.53, 24.19) {$\ExpHybrid$};
 \end{scope}
 \end{tikzpicture}
