--- a/literature.bib
+++ b/literature.bib
@@ -29,6 +29,27 @@
   publisher={Wiley Online Library}
 }
 
+@article{kahn1962topological,
+  title={Topological sorting of large networks},
+  author={Kahn, Arthur B},
+  journal={Communications of the ACM},
+  volume={5},
+  number={11},
+  pages={558--562},
+  year={1962},
+  publisher={ACM}
+}
+
+@article{tarjan1972depth,
+  title={Depth-first search and linear graph algorithms},
+  author={Tarjan, Robert},
+  journal={SIAM journal on computing},
+  volume={1},
+  number={2},
+  pages={146--160},
+  year={1972},
+  publisher={SIAM}
+}
 
 @incollection{HuMoerder85,
   author      = {Hu, T. C. and Moerder, K.},
