--- a/master_thesis/sections/local_search.tex
+++ b/master_thesis/sections/local_search.tex
@@ -21,15 +21,10 @@ source set $S$ and a sink set $T$. Let $(V_1',V_2')$ be the minimum $(S,T)$-bipa
 obtained by a maximum $(S,T)$-flow calculation on $T_L(H_{V'})$ with $f$ as maximum flow
 function. We can extend the bipartition $(V_1',V_2')$ of $H_{V'}$ to a bipartition 
 $B_2 := (V_1 \setminus V'\ \cup\ V_1',\ V_2 \setminus V'\ \cup V_2' )$ on $H$. Finally,
-we need to define the cut on hypergraph $H$ and its subhypergraph $H_{V'}$ related to a
-bipartion $(V_1,V_2)$. For this porpose we define the set of all cut hyperedges
-$E(V_1,V_2) := \{e \in E\ |\ \exists u,v \in e: u \in V_1\ \land\ v \in V_2\}$.
-We define the cut on $H$ resp. $H_{V'}$ with
-\begin{align*}
-\omega_H(V_1,V_2) := \sum_{e \in E(V_1,V_2)} \omega(e) \\
-\omega_{H_{V'}}(V_1,V_2) := \sum_{e \in E(V_1,V_2) \setminus E_{\emptyset}} \omega(e) 
-\end{align*}
-Some will be wondering about the defnition of the cut $\omega_{H_{V'}}$ of $H_{V'}$ over the
+we define the cut on subhypergraph $H_{V'}$ related to a
+bipartion $(V_1,V_2)$:
+\[\omega_{H_{V'}}(V_1,V_2) := \sum_{e \in E(V_1,V_2) \setminus E_{\emptyset}} \omega(e) \]
+Some will wonder about the defnition of the cut $\omega_{H_{V'}}$ over the
 cut edges of $H$. A cut hyperedge $e$ of $H$ must not necessarily be a cut hyperedge
 of $H_{V'}$. E.g., if $e = \{v_1,v_2\}$ with $v_1 \in V_1$ and $v_2 \in V_2$, but
 $v_1 \in V'$ and $v_2 \notin V'$. Then $e$ is cut in $H$, but not in $H_{V'}$, because
