--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -70,7 +70,7 @@ let $S$ and $T$ be a source and sink set with $S \cap T = \emptyset$ and
 $\forall s \in S:\forall (s,v) \in E: c(s,v) = \infty$ and $\forall t 
 \in T:\forall (v,t) \in E: c(v,t) = \infty$. \\
 For any $V' \subseteq V$ a minimum-capacity $(S,T)$-cutset in $G$ is equal with a minimum-capacity
-$(S',T')$-cutset in $G$, where $S' = S\setminus V'\ \cup \bigcup\limits_{s \in I(V' \cap S)} \{s'\}$ and 
+$(S',T')$-cutset in $G$, where $S' = S\setminus V'\ \cup \bigcup\limits_{s' \in I(V' \cap S)} \{s'\}$ and 
 $T' = T\setminus V'\ \cup \bigcup\limits_{t' \in I(V' \cap T)} \{t'\}$ and $S' \cap T' = \emptyset$.
 \end{lemma}
 
@@ -104,171 +104,60 @@ $T' = T \setminus V'\ \cup \bigcup\limits_{e \in I(V'\cap T)} \{e''\}$.
 
 \begin{proof}
 
-Let's consider again the bipartite graph representation $G_L = (V_L,E_L,c_L)$ 
-of a hypergraph $H = (V,E,c,\omega)$ presented in Section \ref{sec:related_lawler}, 
-where for all $v \in V: c_L(v) = \infty$ and for all $e \in E: c_L(e) = 
-\omega(e)$. A minimum-weight $(S,T)$-vertex seperator in $G_L$ is equal
+Consider again the bipartite graph representation $G_* = (V_*,E_*,c_*)$ 
+of a hypergraph $H = (V,E,c,\omega)$ presented in Section \ref{sec:hypergraph} and \ref{sec:related_lawler}, 
+where for all $v \in V: c_*(v) = \infty$ and for all $e \in E: c_*(e) = 
+\omega(e)$. A minimum-weight $(S,T)$-vertex seperator in $G_*$ is equal
 with a minimum-weight $(S,T)$-cutset in $H$. A minimum-weight $(S,T)$-vertex seperator can be calculated
 by finding a minimum-capacity $(S,T)$-cutset in \ShortT{L}. Let $G_H$ be the graph obtained by removing
-all $v \in V'\setminus (S \cup T)$ of $G_L$ and insert a clique between all $e \in I(v)$. 
+all $v \in V'\setminus (S \cup T)$ of $G_*$ and insert a clique between all $e \in I(v)$. 
 A minimum-weight $(S,T)$-vertex seperator in $G_H$ can be calculated by finding a 
 minimum-capacity $(S,T)$-cutset in our new network \ShortExT{H}{V'\setminus (S \cup T)}.
-We will show that each vertex seperator in $G_L$ is also a vertex seperator in $G_H$ and
+We will show that each vertex seperator in $G_*$ is also a vertex seperator in $G_H$ and
 vice versa. Finally, with Lemma \ref{lemma:lemma1} follows our assumption. We will 
 denote a vertex seperator of a graph $G$ with $\V{G}$ and define $V'' := V' \setminus (S \cup T)$. 
-We will show, that $\V{G_L} = \V{G_H}$ with the restriction $\V{G_L} \subseteq E$ and
+We will show, that $\V{G_*} = \V{G_H}$ with the restriction $\V{G_*} \subseteq E$ and
 $\V{G_H} \subseteq E$.
 
-Let's assume, that $\V{G_L} \subseteq E$ is not a vertex seperator in $G_H$. After removing all $e \in \V{G}$ in
+Let's assume, that $\V{G_*} \subseteq E$ is not a vertex seperator in $G_H$. After removing all $e \in \V{G}$ in
 $G_H$, there exists still a path $P_H = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
-$v_k \in T$ in $G_H$. We can extend $P_H$ to a path $P_L$ in $G_L$.
-We define $P_L := P_H$ and replaces every occurence of a sequence $v_i = e_1 \in E$ and
-$v_{i+1} = e_2 \in E$ with a triple $(e_1,v,e_2)$ in $P_L$, where $v \in e_1 \cap e_2 \cap V''$
-(not empty per construction). $P_L$ not contain any vertex of $\V{G_L}$, because
-we removed all $v \in \V{G_L}$ from $G_H$ and only hypernodes are added to $P_L$. $P_L$ connects $S$ and 
-$T$ in $G_L$, which is a contradiction that $\V{G_L}$ is a vertex seperator in $G_L$.
+$v_k \in T$ in $G_H$. We can extend $P_H$ to a path $P_*$ in $G_*$.
+We define $P_* := P_H$ and replaces every occurence of a sequence $v_i = e_1 \in E$ and
+$v_{i+1} = e_2 \in E$ with a triple $(e_1,v,e_2)$ in $P_*$, where $v \in e_1 \cap e_2 \cap V''$
+(not empty per construction). $P_*$ not contain any vertex of $\V{G_*}$, because
+we removed all $v \in \V{G_*}$ from $G_H$ and only hypernodes are added to $P_*$. $P_*$ connects $S$ and 
+$T$ in $G_*$, which is a contradiction that $\V{G_*}$ is a vertex seperator in $G_*$.
 
-Let's assume, that $\V{G_H} \subseteq E$ is not a vertex seperator in $G_L$. After removing all $e \in \V{G_H}$ in
-$G_L$, there exists still a path $P_L = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
-$v_k \in T$ in $G_L$. We can extend $P_L$ to a path $P_H$ in $G_H$.
-We define $P_H := P_L$ and remove all $v \in P_L \cap V''$ from $P_H$. $G_L$ is a bipartite
-graph per definition. Therefore, every path $P_L$ in $G_L$ is an alternating path of hypernodes and
-hyperedges. The predecessor and successor of a hypernode $v \in P_L \cap V''$ must be hyperedges
+Let's assume, that $\V{G_H} \subseteq E$ is not a vertex seperator in $G_*$. After removing all $e \in \V{G_H}$ in
+$G_*$, there exists still a path $P_* = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
+$v_k \in T$ in $G_*$. We can extend $P_*$ to a path $P_H$ in $G_H$.
+We define $P_H := P_*$ and remove all $v \in P_* \cap V''$ from $P_H$. $G_*$ is a bipartite
+graph per definition. Therefore, every path $P_*$ in $G_*$ is an alternating path of hypernodes and
+hyperedges. The predecessor and successor of a hypernode $v \in P_* \cap V''$ must be hyperedges
 $e_1$ and $e_2$. If $v \in V''$, then $v$ is not contained $G_H$. Instead, there is
 a clique between all $e \in I(V) \Rightarrow$ $(e_1,e_2)$ is contained in $G_H$.
-$P_H$ not contain any vertex of $\V{G_H}$, because we removed all $v \in \V{G_H}$ from $\V{G_L}$ 
-and we removed only hypernodes from $P_L$. $P_H$ connects $S$ and $T$ in $G_H$, which is a contradiction 
+$P_H$ not contain any vertex of $\V{G_H}$, because we removed all $v \in \V{G_H}$ from $\V{G_*}$ 
+and we removed only hypernodes from $P_*$. $P_H$ connects $S$ and $T$ in $G_H$, which is a contradiction 
 that $\V{G_H}$ is a vertex seperator in $G_H$.
 
-A minimum-weight $(S,T)$-vertex seperator in $G_L$ and $G_H$ only contains hyperedges, because
-the weight of all hypernodes in $G_L$ and $G_H$ is $\infty$. Therefore, each minimum
-$(S,T)$-vertex seperator in $G_L$ is also a minimum-weight $(S,T)$-vertex seperator in $G_H$,
-because $\V{G_L} = \V{G_H}$. With Lemma \ref{lemma:lemma1} follows that we can calculate
-a minimum-weight $(S,T)$-vertex seperator in $G_L$ resp. $G_H$ by calculating a minimum-capacity
+A minimum-weight $(S,T)$-vertex seperator in $G_*$ and $G_H$ only contains hyperedges, because
+the weight of all hypernodes in $G_*$ and $G_H$ is $\infty$. Therefore, each minimum
+$(S,T)$-vertex seperator in $G_*$ is also a minimum-weight $(S,T)$-vertex seperator in $G_H$,
+because $\V{G_*} = \V{G_H}$. With Lemma \ref{lemma:lemma1} follows that we can calculate
+a minimum-weight $(S,T)$-vertex seperator in $G_*$ resp. $G_H$ by calculating a minimum-capacity
 $(S',T')$-cutset in \ShortT{L} resp. \ShortExT{H}{V'}. Therefore, there exists a equivalence
 between a minimum-weight $(S,T)$-cutset $E_{min}$ of $H$ and the following statements: 
 
 $E_{min}$ is a minimum-$\ldots$
 \begin{enumerate}
 \item $\ldots$-weight $(S,T)$-cutset in $H$
-\item $\ldots$-weight $(S,T)$-vertex seperator in $G_L$
+\item $\ldots$-weight $(S,T)$-vertex seperator in $G_*$
 \item $\ldots$-capacity $(S,T)$-cutset in \ShortT{L}
 \item $\ldots$-capacity $(S',T')$-cutset in \ShortT{L} (follows from (iii) with Lemma \ref{lemma:lemma1})
 \item $\ldots$-weight $(S,T)$-vertex seperator in $G_H$
 \item $\ldots$-capacity $(S,T)$-cutset in \ShortExT{H}{V''}
 \item $\ldots$-capacity $(S',T')$-cutset in \ShortExT{H}{V'} (follows from (vi) with Lemma \ref{lemma:lemma1})
 \end{enumerate}
-
-%Lawler \cite{lawler1973} showed \autoref{theorem:st_cutset_equal} for his transformation \ShortT{L}.
-%The following proof is subdivided into three parts
-%\begin{enumerate}
-%\item We will show how to map an augmenting path in \ShortExT{H}{V'} to an augmenting
-%      path in \ShortT{L}.
-%\item We will execute an maximum flow augmenting path algorithm on \ShortExT{H}{V'} and simultanously
-%      map every augmenting path in \ShortExT{H}{V'} to \ShortT{L}.
-%\item We assume that the flow on \ShortT{L} is not a maximum flow by assuming that still an augmenting
-%      path $P$ exists and lead this to a contradiction by constructing an augmenting path $P'$ with $P$
-%      on \ShortExT{H}{V'}.
-%\end{enumerate}
-%
-%Let $\gamma: E \times E \rightarrow V' \cup \emptyset$ be a symmetric function ($\gamma(e_1,e_2) = \gamma(e_2,e_1)$), 
-%which maps every pair of hyperedges $e_1, e_2 \in E$ to a hypernode $v \in e_1 \cap e_2 \cap V'$. If
-%$e_1 \cap e_2 \cap V' = \emptyset$, then $\gamma(e_1,e_2) = \emptyset$. We will use $\gamma$
-%to redirect a flow of an edge $(e_1'',e_2')$ or $(e_1',e_2'')$ in \ShortExT{H}{V'} over the same hypernode
-%$\gamma(e_1,e_2)$ in \ShortT{L} every time. This is necassary to obtain a valid flow function. 
-%
-%Let $P = (v_1, \ldots, v_k)$ be an augmenting path in \ShortExT{H}{V'}. If for any $i \in [1,k]: v_i 
-%= e_1''$ and $v_{i+1} = e_2'$, we replace $v_i$ and $v_{i+1}$ in $P$ by a triple $(e_1'',\gamma(e_1,e_2),e_2')$. This is
-%possible, because $c_L(e_1'',\gamma(e_1,e_2)) = \infty$ and $c_L(\gamma(e_1,e_2),e_2') = \infty$. \\
-%If for any $i \in [1,k]: v_i = e_1'$ and $v_{i+1} = e_2''$, we replace $v_i$ and $v_{i+1}$ in $P$
-%by a triple $(e_1',\gamma(e_1,e_2),e_2'')$. Since we push flow over of an edge $(e_2'',e_1')$ in \ShortExT{H}{V'}
-%every time over the same hypernode $\gamma(e_1,e_2)$ in \ShortT{L}, we ensure that
-%$\R{e_1',e_2''} \le \R{e_1',\gamma(e_1,e_2)}$ and $\R{e_1',e_2''} \le \R{\gamma(e_1,e_2),e_2''}$
-%is satisfied for the residual capacities. Therefore, replacing $v_i$ and $v_{i+1}$ by the 
-%triple $(e_1',\gamma(e_1,e_2),e_2'')$ results in valid augmenting path in \ShortT{L}. \\
-%If $e =: v_1 \notin S$, we will choose a random $v \in e \cap V'$ and insert $v$ as first node
-%of the augmenting path in \ShortT{L}. If $e =: v_k \notin T$, we will choose a random 
-%$v \in e \cap V'$ and insert $v$ as last node of the augmenting path in \ShortT{L}.
-%
-%With the previously described mapping, we are able to execute an augmenting path 
-%maximum flow algorithm on \ShortExT{H}{V'} and simultanously
-%map each augmenting path in \ShortExT{H}{V'} on an augmenting path in \ShortT{L}.
-%
-%Let's assume the calculation of a maximum flow on \ShortExT{H}{V'} do not result in a
-%maximum flow on \ShortT{L}. Then there exists an augmenting path $P = \{v_1,\ldots,v_k\}$
-%in \ShortT{L}. Let's reverse $P$ and treat it like stack. The node on top of the stack is
-%denoted with $P(0)$, the second with $P(1)$ and so on. We will construct an augmenting
-%path $P'$ in \ShortExT{H}{V'} with the following rules:\\
-%We will denote with $P_k$ the last node added to $P$.
-%\begin{enumerate}
-%\item If $P' = \emptyset$ and $P(0) \notin S'$, then add $P(1)$ (Note, $P(1) \in S'$, since $P(0) \in V'$)
-%to $P'$ and pop $P(0)$ and $P(1)$ from $P$.
-%\item If $P' = \emptyset$ and $P(0) \in S'$, then add $P(0)$ and $P(1)$
-%to $P'$ and pop $P(0)$ and $P(1)$ from $P$.
-%\item If $(P(0),P(1),P(2)) = (e_1'',v,e_2')$, then add 
-%\end{enumerate}
-
-
-
-
-%In the following we will extend a $(S',T')$-maximum flow $f_H$ of \ShortExT{H}{V'} to a maximum flow
-%$f_L$ on \T{L}~with $(S,T)$ as source and sink sets. \\
-%Let $f_H$ be a $(S',T')$-maximum flow on \ShortExT{H}{V'}. 
-%We define $f_L$ on \ShortT{L} as follows
-%\begin{enumerate}
-%\item $\forall e \in E$ we define $f_L(e',e'') := f_H(e',e'')$ and $f_L(e'',e') := f_H(e'',e')$
-%\item $\forall (e_1'',e_2') \in E_H$ we choose a random
-%      $v \in e_1 \cap e_2 \cap V'$ (which is not empty per construction) and increase the flow on
-%      \begin{enumerate}
-%      \item $f_L(e_1'',v)$ and $f_L(v,e_2')$ by $f_H(e_1'',e_2')$
-%      \item $f_L(e_2',v)$ and $f_L(v, e_1'')$ by $f_H(e_2',e_1'')$ (Note, $f_H(e_2',e_1'') \le c_H(e_2',e_1'') = 0$)
-%      \end{enumerate}
-%\item $\forall s' \in S'\setminus S$ we choose a random $s \in s' \cap S \cap V'$ and increase the flow on 
-%      $f_L(s,s')$ by $\sum_{(s',v) \in E_H} f_H(s',v)$ and define $f_L(s',s) := -f_L(s,s')$
-%\item $\forall t'' \in T' \setminus T$ we choose a random $t \in t'' \cap T \cap V'$ and increase the flow on 
-%      $f_L(t'',t)$ by $\sum_{(v,t'') \in E_H} f_H(v,t'')$ and define $f_L(t,t'') := -f_L(t'',t)$
-%\item $\forall v \in V \setminus V'$ and all incident hyperedges $e \in I(v)$, we define
-%      \begin{enumerate}
-%      \item $f_L(v,e') := f_H(v,e')$ and $f_L(e',v) := f_H(e',v)$
-%      \item $f_L(e'',v) := f_H(e'',v)$ and $f_L(v,e'') := f_H(v,e'')$
-%      \end{enumerate}
-%\end{enumerate}
-%
-%Under the assumption that $f_H$ is a valid flow the capacity 
-%constraint for $f_L$ is obviously satisfied. $\forall e \in E: c_L(e',e'') = c_H(e',e'')$,
-%therefore $f_L(e',e'') \le c_L(e',e'')$. $\forall e_1, e_2 \in E: \forall v \in 
-%e_1 \cap e_2: c_H(e_1'',e_2') = c_L(e_1'',v) = c_L(v,e_2') = \infty$ and 
-%$c_H(e_2',e_1'') = c_L(v, e_1'') = c_L(e_2',v) = 0$, therefore (iia) and
-%(iib) also satisfy the capacity constraint. All outgoing edges of a node $s \in S$
-%and all incomming edges of a node $t \in T$ have a capacity equal to $\infty$. 
-%We can set the flow $f_L$ on those edges to any value. All edges covered by (v) exists
-%in both networks with the same capacity.\\
-%Per definition of (iia) and (iib) $\forall v \in V'\setminus S \cup T$ the amount of flow entering $v$
-%is the same as exiting $v$. Further, we have to proof the conservation of flow constraint
-%for each hyperedge node in $V_L$.
-%\begin{align*}
-%\forall e' \in V_L\setminus S': \sum_{(v,e') \in E_L} f_L(v,e') + f_L(e'',e') 
-%\stackrel{(iia) + (v)}{=} \sum_{\substack{(v,e') \in E_H \\ v \in V\setminus V'}} f_H(v,e')  + 
-%\sum_{\substack{(e,e') \in E_H \\ e \neq e'', e \notin V\setminus V'}} f_H(e,e') + f_H(e'',e') \\
-%= \sum_{\substack{(e',v) \in E_H \\ v \in V\setminus V'}} f_H(e',v) +
-%\sum_{\substack{(e',e) \in E_H \\ e \neq e'', e \notin V\setminus V'}} f_H(e',e) + f_H(e',e'') 
-%\stackrel{(iib) + (v)}{=} \sum_{(e',v) \in E_L} f_L(e',v) + f_L(e',e'')
-%\end{align*}
-%For all $e'' \in V_L \setminus T'$ the proof is equivalent. Each $e' \in S'$ and $e'' \in T'$
-%also satisfy the constraint by definition of (iii) and (iv). Finally, the value of the flow
-%$|f_L|$ on \ShortT{L} is the same as the maximum flow $|f_H|$ on \ShortT{H}.
-%
-%\[ |f_L| = \sum_{\substack{(s,e) \in E_L, \\ s \in S}} f_L(s,e) 
-%\stackrel{(iii)}{=} \sum_{\substack{(s,e) \in E_H, \\ s \in S'}} f_L(s,e) = |f_H|\]
-%
-%$f_L$ is a valid flow on \ShortT{L} with $(S,T)$ as source and sink sets. Let's assume
-%$f_L$ is not a maximum flow. Then we will find an augmenting path $P = (p_1, \ldots, p_k)$
-%(with $p_i \in V_L$) in the residual graph of \ShortT{L}. Let $P' = (p_1',\ldots,p_{k'}')$
-%be the resulting path in \ShortExT{H}{V'}~by removing all $p_i \in V'$ in $P$. Then $P'$ is an
-%augmenting path in \ShortExT{H}{V'}. This is a contradiction to the assumption that $f_H$ is
-%a maximum flow on \ShortExT{H}{V'}. Therefore, $f_L$ is a maximum flow on \ShortT{L} and the
-%minimum-capacity $(S',T')$-cutset of \ShortExT{H}{V'} is a minimum-weight $(S,T)$-cutset
-%in $H$.
 
 \end{proof}
 
@@ -321,10 +210,6 @@ $d(v)(d(v) - 1) \le 2d(v)$ is satisfied. Removing such low degree hypernodes not
 the number of nodes, but also the number of edges. \\
 Let $V_{d}(n) = \{v\ |\ v \in V\ \land\ d(v) \le n\}$ be the set of all hypernodes
 with degree smaller or equal $n$. Then our suggested flow network is \ShortExT{H}{V_d(3)}.
-
-\begin{enumerate}
-\item \todo{Think about removing node via Clique Expansion, e.g. $e_1 \cap e_2 = \{v_1,v_2\}$}
-\end{enumerate}
 
 \subsection{Removing Hyperedges via Undirected Flow-Edges}
 \label{sec:edge_size_network}
